# 1d-final-project-summer-2024-sds-2024-team-09

./: .coverage  .dockerignore  .example.env  .gitignore  .gitmodules  Dockerfile  Gemfile  README.md  README_TEAM.md  README_old.md  Rakefile  SDS Testcase.xlsx  babel.config.js  cloud_env.bat  cloudbuild.yaml  cors.json  cry_baby.json  dbpassword  gcs.json  gcs.keyfile  generate_manifest.js  package-lock.json  package.json  pyproject.toml
agora-monitoring/: .env  package-lock.json  package.json
ai_feature/: .gitignore  pyproject.toml  test.py
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  jya-keyfile.json  routes.rb  secrets.yml  storage.yml
coverage/: .last_run.json  .resultset.json  index.html
cry_baby/: test.py
cucumber/: cam_disconnected.feature  edit_video_title.feature  sort_videos.feature  unavailable_video.feature  vid_wrong_month.feature  view_recorded_videos.feature
db/: schema.rb  seeds.rb
features/: cam_disconnected.feature  camera.feature  cry-detection.feature  edit_sort_videos.feature  edit_video_title.feature  example_feature.feature  index.feature  live_feed.feature  manage_videos.feature  pages_controller.feature  prevent_accidental_deletion.feature  sessions_controller.feature  sort_videos.feature  user.feature  user_login_and_streaming.feature  user_login_and_streaming_spec.rb  vid_unavailable.feature  vid_wrong_month.feature  view_recorded_videos.feature
frontend/: .env  .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  cert.pem  config.js  index.html  jest.config.js  key.pem  others.textClipping  (+4 more)
(+401 files in other folders)
